// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. video 1`] = `
<Touchable
  accessibilityLabel="splash-component"
  testID="splash-component"
>
  <View
    style={
      Object {
        "height": 200,
        "width": 300,
      }
    }
  >
    <TimesImage
      style={
        Object {
          "height": 200,
          "width": 300,
        }
      }
      uri="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "height": 200,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 300,
        }
      }
    >
      <PlayIcon />
    </View>
  </View>
</Touchable>
`;

exports[`2. video without a poster image 1`] = `
<Touchable
  accessibilityLabel="splash-component"
  testID="splash-component"
>
  <View
    style={
      Object {
        "height": 200,
        "width": 300,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "black",
          "height": 200,
          "width": 300,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "height": 200,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 300,
        }
      }
    >
      <PlayIcon />
    </View>
  </View>
</Touchable>
`;
